--- a/proj/untitled/mainwindow.ui
+++ b/proj/untitled/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>512</width>
-    <height>238</height>
+    <width>1015</width>
+    <height>637</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
 	background-color: white;
 }</string>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,1">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -36,10 +36,14 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="QPlainTextEdit" name="justReadZone"/>
+     <widget class="QPlainTextEdit" name="writeableZone"/>
     </item>
     <item>
-     <widget class="QPlainTextEdit" name="readAndWriteZone"/>
+     <widget class="QLabel" name="markdownZone">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -48,7 +52,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>512</width>
+     <width>1015</width>
      <height>23</height>
     </rect>
    </property>
